# math-soft

./: README.md
ass02/: Makefile  navier-stokes.tex  reference.bib
ass03/: duplicate_checking.sh
ass03/directory/: 2.txt  3.txt
ass04/: interp  interp.c  interp.eps  interp.tex
ass05/: Makefile
ass05/doc/: lsq.tex
ass06/: CMakeCache.txt  CMakeLists.txt  Chicken.h  Doxyfile  Makefile  MyProject  cmake_install.cmake  install_manifest.txt  main.cpp
ass06/docs/html/: Chicken_8h_source.html  annotated.html  classChicken-members.html  classChicken.html  classes.html  files.html  functions.html  functions_func.html  main_8cpp.html  main_8cpp__incl.dot
ass06/docs/html/search/: all_0.js  all_2.js  classes_0.js  functions_0.js  functions_2.js  searchdata.js
ass06/docs/latex/: annotated.tex  classChicken.tex  files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  refman.tex
ass07/: Makefile  dimension.txt  ellipse.gp
math-soft/: template.tex
proj/: Makefile  README.md
proj/doc/: Makefile  final.aux  final.tex  solution.eps
proj/files/: CMakeCache.txt  Makefile  cmake_install.cmake  solution.vtk  step-3.cc
proj/make/: Makefile  final.tex
